tests/NormalTests/paczka1/fuzzy1/67443796.err
Error in line 5: WTr S246 76,8
Error in line 3: tLWn3k4Ak S910 922,9
Error in line 16: RX2SoPlgW S755 34,9
Error in line 22: S755 A565 17,7
Error in line 19: RX2SoPlgW S246 82,3
Error in line 35: IPxncfrA2 S755 69,5
